nesc-frontend/src/test/resources/integration/programs/good/good15/I.nc
interface I<T>
{
   command void init();
   event void initDone(T value);
}
