nesc-frontend/src/test/resources/integration/programs/bad/bad18/M.nc
module M
{
   provides interface I<float>;
}
implementation
{
   command float I.get()
   {
      return 7.0f;
   }
}
